--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <body>
   <h1>Este es el título de la página</h1>
   <h2>Este es el subtitulo de la página</h2>
+  <div>
+    <p>Este es el primer párrafo de la página</p>
+  </div>
 </body>
 </html>
