Agregado segundo parrafo de la pagina

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h2>Este es el subtitulo de la página</h2>
   <div>
     <p>Este es el primer párrafo de la página</p>
+    <p>Este es el segundo parrafo de la página</p>
   </div>
 </body>
 </html>
